@@ -10,14 +10,15 @@
   <version>2.0.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.source>25</maven.compiler.source>
+    <maven.compiler.target>25</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.version>3.30.6</quarkus.platform.version>
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
+    <graalvm.version>25.0.2</graalvm.version>
   </properties>
 
   <dependencyManagement>
@@ -136,15 +137,16 @@
     <dependency>
       <groupId>com.streamx</groupId>
       <artifactId>streamx-runner</artifactId>
-      <version>2.0.10</version>
+      <version>2.0.20-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>com.streamx</groupId>
       <artifactId>mesh-model</artifactId>
-      <version>2.0.10</version>
+      <version>2.0.20-SNAPSHOT</version>
     </dependency>
 
+    <!-- TODO - is it needed here? -->
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-client-api</artifactId>
@@ -155,10 +157,43 @@
       <artifactId>kubernetes-model-apiextensions</artifactId>
     </dependency>
 
+    <!-- Native image dependencies -->
     <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers</artifactId>
-      <version>2.0.3</version>
+      <groupId>org.graalvm.sdk</groupId>
+      <artifactId>graal-sdk</artifactId>
+      <version>${graalvm.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.graalvm.nativeimage</groupId>
+      <artifactId>svm</artifactId>
+      <version>${graalvm.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.fusesource.jansi</groupId>
+      <artifactId>jansi</artifactId>
+      <version>2.4.1</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>org.jline</groupId>-->
+<!--      <artifactId>jline</artifactId>-->
+<!--      <version>3.25.1</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>com.github.albfernandez</groupId>
+      <artifactId>juniversalchardet</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.brotli</groupId>
+      <artifactId>dec</artifactId>
+      <version>0.1.2</version>
     </dependency>
 
     <!-- Testing Dependencies -->
@@ -202,36 +237,36 @@
   </dependencies>
 
   <repositories>
-    <repository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>streamx-maven-snapshots</id>
-      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-snapshots</url>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>streamx-maven-releases</id>
-      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-releases</url>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>streamx-maven-public-releases</id>
-      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-public-releases</url>
-    </repository>
+<!--    <repository>-->
+<!--      <releases>-->
+<!--        <enabled>false</enabled>-->
+<!--      </releases>-->
+<!--      <snapshots>-->
+<!--        <enabled>true</enabled>-->
+<!--      </snapshots>-->
+<!--      <id>streamx-maven-snapshots</id>-->
+<!--      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-snapshots</url>-->
+<!--    </repository>-->
+<!--    <repository>-->
+<!--      <releases>-->
+<!--        <enabled>true</enabled>-->
+<!--      </releases>-->
+<!--      <snapshots>-->
+<!--        <enabled>false</enabled>-->
+<!--      </snapshots>-->
+<!--      <id>streamx-maven-releases</id>-->
+<!--      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-releases</url>-->
+<!--    </repository>-->
+<!--    <repository>-->
+<!--      <releases>-->
+<!--        <enabled>true</enabled>-->
+<!--      </releases>-->
+<!--      <snapshots>-->
+<!--        <enabled>false</enabled>-->
+<!--      </snapshots>-->
+<!--      <id>streamx-maven-public-releases</id>-->
+<!--      <url>artifactregistry://europe-west1-maven.pkg.dev/streamx-releases/streamx-maven-public-releases</url>-->
+<!--    </repository>-->
   </repositories>
 
   <build>
@@ -257,6 +292,15 @@
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.platform.version}</version>
         <extensions>true</extensions>
+        <configuration>
+          <jvmArgs>
+            <!-- Fixes:
+              java.lang.IllegalAccessError: module java.base does not open java.lang to unnamed module @xxx;
+              to use the thread-local-reset capability on Java 24 or later.
+            -->
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </jvmArgs>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -300,6 +344,13 @@
         <version>${compiler-plugin.version}</version>
         <configuration>
           <parameters>true</parameters>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging-processor</artifactId>
+              <version>3.0.4.Final</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
@@ -309,6 +360,14 @@
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemPropertyVariables>
+          <argLine>
+            <!-- Fixes:
+              java.lang.IllegalAccessError: module java.base does not open java.lang to unnamed module @xxx;
+              to use the thread-local-reset capability on Java 24 or later.
+            -->
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            -agentlib:native-image-agent=config-output-dir=${project.basedir}/src/main/resources/META-INF/native-image
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -326,6 +385,17 @@
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.graalvm.buildtools</groupId>
+        <artifactId>native-maven-plugin</artifactId>
+        <version>0.11.4</version>
+        <extensions>true</extensions>
+        <configuration>
+          <metadataRepository>
+            <enabled>true</enabled>
+          </metadataRepository>
         </configuration>
       </plugin>
     </plugins>
@@ -347,8 +417,9 @@
         </property>
       </activation>
       <properties>
-        <skipITs>false</skipITs>
         <quarkus.package.type>native</quarkus.package.type>
+        <quarkus.native.enable-metadata-repository>true</quarkus.native.enable-metadata-repository>
+        <quarkus.native.enable-all-security-services>true</quarkus.native.enable-all-security-services>
       </properties>
     </profile>
   </profiles>
